# enterprise-knowledge-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  storage.db
app/: embeddings.py  main.py
app/agent/: __init__.py  agent.py  graph.py  nodes.py  router.py  state.py
app/agent/planner/: __init__.py  classifier.py  models.py  planner.py
app/agent/reflection/: __init__.py  models.py  prompts.py  reflection.py
app/agent/retry/: __init__.py  models.py  retry_engine.py  strategies.py
app/agent/validation/: __init__.py  models.py  validator.py
app/agents/: __init__.py  base.py  generation_agent.py  planner_agent.py  reflection_agent.py  registry.py  retrieval_agent.py  supervisor.py  validation_agent.py
app/api/: dependencies.py  exceptions.py  schemas.py
app/api/routes/: health.py  index.py  jobs.py  query.py  stream.py  upload.py
app/config/: settings.py
app/embeddings/: base.py  bge.py  service.py
app/evaluation/: __init__.py  dataset.py  deepeval_evaluator.py  metrics.py  models.py  ragas_evaluator.py  report.py  runner.py
app/indexing/: index_builder.py
app/ingestion/: chunker.py  cleaner.py  ingestion_service.py  models.py  parser.py  parser_factory.py
app/jobs/: manager.py  models.py
app/llm/: base.py  claude.py  exceptions.py  factory.py  gemini.py  openai.py
app/mcp/: __init__.py  adapters.py  models.py  registry.py  server.py
app/mcp/client/: __init__.py  adapters.py  client.py  manager.py  models.py
app/prompts/: builder.py
app/query/: models.py  service.py
app/retrieval/: bm25.py  context_compressor.py  hybrid.py  multi_query.py  parent_document.py  query_rewriter.py  reranker.py  retriever.py
app/retrieval/filters/: metadata_filter.py
app/retrieval/orchestrator/: __init__.py  classifier.py  models.py  orchestrator.py  rules.py
app/retrieval/self_query/: __init__.py  models.py  parser.py  validator.py
app/tools/: __init__.py  base.py  calculator.py  current_time.py  document_search.py  executor.py  models.py  registry.py
app/tools/planner/: __init__.py  executor.py  models.py  planner.py
app/vectorstore/: faiss_store.py  metadata_store.py
scripts/: build_index.py
tests/: test_agents.py  test_evaluation.py  test_mcp.py  test_mcp_client.py  test_reflection.py  test_retry.py  test_tool_planner.py  test_tools.py  test_validation.py
