[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-assistant"
version = "0.1.0"
description = "Production-grade Enterprise Knowledge Assistant built with FastAPI, LangGraph, FAISS, and LLMs."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Hardik Prajapati" }
]

dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain-text-splitters>=0.3.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "rank-bm25>=0.2.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 

[tool.mypy]
python_version = "3.12"

warn_return_any = true
warn_unused_configs = true

disallow_untyped_defs = true
check_untyped_defs = true

no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true

strict_equality = true

[[tool.mypy.overrides]]
module = [
    "anthropic",
    "openai",
    "google",
    "google.generativeai",
    "google.api_core.*",
    "rank_bm25",
]
ignore_missing_imports = true